--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="hero-content">
                     <h1>Seu novo sorriso começa aqui.</h1>
                     <p>Agende sua consulta online e descubra como a tecnologia e o cuidado humanizado transformam a sua saúde bucal</p>
-                    <a href="contato.html" class="btn btn-cta">Agende Aqui</a>
+                    <a href="agendeaqui.html" class="btn btn-cta">Agende Aqui</a>
                 </div>
             </div>
         </section>
@@ -81,3 +81,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
